class Creencia {
    private String descripcion;

    public Creencia(String descripcion) {
        this.descripcion = descripcion;
    }
}