class Cultura {
    private String descripcion;

    public Cultura(String descripcion) {
        this.descripcion = descripcion;
    }
}