class Edad {
    private int anios;

    public Edad(int anios) {
        this.anios = anios;
    }
}