class Emocion {
    private String tipo;

    public Emocion(String tipo) {
        this.tipo = tipo;
    }
}