class ExperienciaVivida {

    private String descripcion;

    public ExperienciaVivida(String descripcion) {
        this.descripcion = descripcion;
    }

    public void construirIdentidad(Identidad identidad) {
        System.out.println("La experiencia impacta la identidad");
    }
}