class Familia {
    private String apellido;

    public Familia(String apellido) {
        this.apellido = apellido;
    }
}