class RelacionSocial {
    private String tipo;

    public RelacionSocial(String tipo) {
        this.tipo = tipo;
    }
}