@startuml

class Persona {

}

class Identidad {

}

class Edad {

}

class ExperienciaVivida {

}

class Cultura {

}

class Familia {

}

class RelacionSocial {

}

class Emocion {

}

class Creencia {
    
}

Persona *-- Identidad
Persona *-- Edad
Persona *-- ExperienciaVivida
ExperienciaVivida -- Identidad : construye
Identidad o-- Cultura
Identidad -- Familia
Identidad -- RelacionSocial
Identidad o-- Creencia
Identidad ..> Emocion : experimenta

@enduml